Use space separator for different groups

--- a/bugs/c1-intrinsic-primitive-array-clone/8302850/Makefile
+++ b/bugs/c1-intrinsic-primitive-array-clone/8302850/Makefile
@@ -286,7 +286,7 @@ test-hotspot-compiler-686: $(java_686_release)
 
 test-all: $(java_release)
 > cd $(JDK_HOME)
-> CONF=$(conf_release_dir) make test TEST="hotspot_compiler:hotspot_gc:hotspot_serviceability:hotspot_runtime:tier1:tier2:tier3" JTREG="JAVA_OPTIONS=-XX:TieredStopAtLevel=1 -Xcomp"
+> CONF=$(conf_release_dir) make test TEST="hotspot_compiler hotspot_gc hotspot_serviceability hotspot_runtime tier1 tier2 tier3" JTREG="JAVA_OPTIONS=-XX:TieredStopAtLevel=1 -Xcomp"
 .PHONY: test-hotspot-compiler
 
 test-single: $(java_slow)
