Run null array clone with C1 and comment other test

--- a/bugs/c1-intrinsic-primitive-array-clone/8302850/Makefile
+++ b/bugs/c1-intrinsic-primitive-array-clone/8302850/Makefile
@@ -294,8 +294,8 @@ test-single: $(java_slow)
 # > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/arraycopy/TestArrayCopyAsLoadsStores.java" JTREG="JAVA_OPTIONS=-XX:TieredStopAtLevel=1"
 # > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/codecache/stress/UnexpectedDeoptimizationAllTest.java" JTREG="JAVA_OPTIONS=-XX:TieredStopAtLevel=1"
 # > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/c2/irTests/scalarReplacement/AllocationMergesTests.java"
-> CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/interpreter/Test6833129.java" JTREG="JAVA_OPTIONS=-XX:CompileOnly=compiler/interpreter/Test6833129.clone_and_verify"
-> CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/c1/TestNullArrayClone.java"
+# > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/interpreter/Test6833129.java" JTREG="JAVA_OPTIONS=-XX:CompileOnly=compiler/interpreter/Test6833129.clone_and_verify"
+> CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/c1/TestNullArrayClone.java" JTREG="JAVA_OPTIONS=-XX:+PrintLIR -XX:+PrintCompilation"
 .PHONY: test-single
 
 #    TEST                                              TOTAL  PASS  FAIL ERROR
