Enable overriding AVX value

--- a/bugs/intrinsify-max-min-long/8307513/Makefile
+++ b/bugs/intrinsify-max-min-long/8307513/Makefile
@@ -8,8 +8,14 @@ JDK_HOME ?= $(HOME)/1/jdk-intrinsify-max-min-long
 BOOT_JDK_HOME ?= $(opt)/java-22
 include $(TOPDIR)/make/common/OpenJDK.gmk
 
+AVX ?=
+ifdef AVX
+  jvm_args += -XX:UseAVX=$(AVX)
+endif
+
 run: clear-logs $(java)
 > $(call_java) \
+>   $(jvm_args) \
 >   -Xbatch \
 >   -XX:LoopUnrollLimit=250 \
 >   -XX:CompileCommand=exclude,$(CLASS)::main \
