Don't print result and enable diagnostics

--- a/perfasm/Makefile
+++ b/perfasm/Makefile
@@ -9,6 +9,7 @@ CONF ?= release
 JDK_HOME ?= $(HOME)/1/jdk21u-dev
 include $(TOPDIR)/make/common/OpenJDK.gmk
 
+jvm_args += -XX:+UnlockDiagnosticVMOptions
 jvm_args += -XX:+PrintNMethods
 jvm_args += -XX:CompileOnly=Test.test
 
