Run JCStress tests against a locally built JDK

--- a/bugs/clone-memory-barrier/8332670/Makefile
+++ b/bugs/clone-memory-barrier/8332670/Makefile
@@ -7,6 +7,7 @@ CLASS ?= Test
 JDK_HOME ?= $(HOME)/1/jdk-clone-memory-barrier
 BOOT_JDK_HOME ?= $(opt)/java-22
 include $(TOPDIR)/make/common/OpenJDK.gmk
+include $(TOPDIR)/make/common/JCStress.gmk
 
 run: clear-logs $(java)
 > $(call_java) \
