Refactor to prof and add time parameter

--- a/perfasm/Makefile
+++ b/perfasm/Makefile
@@ -1,7 +1,7 @@
 TOPDIR = ..
 include $(TOPDIR)/make/common/MakeBase.gmk
 
-default: perfasm
+default: prof
 
 BOOT_JDK_HOME ?= $(opt)/boot-java-21
 CLASS ?= Test
@@ -12,6 +12,9 @@ include $(TOPDIR)/make/common/OpenJDK.gmk
 jvm_args += -XX:+UnlockDiagnosticVMOptions
 jvm_args += -XX:+PrintNMethods
 jvm_args += -XX:CompileOnly=Test.test
+
+PROF ?= perf
+TIME ?= 10
 
 run: clear-logs $(java)
 > $(call_java) \
@@ -24,17 +27,9 @@ JAVA_HOME ?= $(JDK_HOME)/build/$(conf_name)/jdk
 benchmarks_jar = $(APP_DIR)/jmh-samples/target/benchmarks.jar
 include $(TOPDIR)/make/common/Maven.gmk
 
-perfasm: $(benchmarks_jar) $(java)
-> $(java) -jar $(benchmarks_jar) JMHSample_01 -f 1 -i 1 -r 1 -wi 1 -w 1 -prof perfasm
+prof: $(benchmarks_jar) $(java)
+> $(java) -jar $(benchmarks_jar) JMHSample_01 -f 1 -i 1 -r $(TIME) -wi 1 -w $(TIME) -prof $(PROF)
 .PHONY: perfasm
-
-perfstat: $(benchmarks_jar) $(java)
-> $(java) -jar $(benchmarks_jar) JMHSample_01 -f 1 -i 1 -r 1 -wi 1 -w 1 -prof perf
-.PHONY: perfstat
-
-perfnorm: $(benchmarks_jar) $(java)
-> $(java) -jar $(benchmarks_jar) JMHSample_01 -f 1 -i 1 -r 1 -wi 1 -w 1 -prof perfnorm
-.PHONY: perfnorm
 
 $(benchmarks_jar): $(shell find $(JMH_HOME) -type f -name '*.java')
 $(benchmarks_jar): $(java) $(mvnw)
