--- a/byteman-logging/pom.xml
+++ b/byteman-logging/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>disruptor</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman</artifactId>
+            <version>4.0.25</version>
+        </dependency>
     </dependencies>
 
     <build>
